--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.5",
 		"tailwindcss": "^4.1.10"
+	},
+	"dependencies": {
+		"@qiun/ucharts": "^2.5.0-20230101"
 	}
-
 }
