add login fuction

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 		"tailwindcss": "^4.1.10"
 	},
 	"dependencies": {
-		"@qiun/ucharts": "^2.5.0-20230101"
+		"@pinia/nuxt": "^0.11.1",
+		"@qiun/ucharts": "^2.5.0-20230101",
+		"jsonwebtoken": "^9.0.2",
+		"pinia": "^3.0.3"
 	}
 }
